--- a/src/styles.sass
+++ b/src/styles.sass
@@ -36,6 +36,15 @@
             font-weight: 700
             font-size: 1.6rem
             transition: ease out 200ms
+        p
+            background: white
+            color: black
+            border: dotted black 2px
+            border-radius: 5px
+            text-wrap: pretty
+            margin: 1rem
+            padding: 2rem
+            max-width: 600px
 
     .page-info
         width: 100%
@@ -48,6 +57,13 @@
         text-align: center
         h1
             margin: 0
+        h2
+            color: black
+            text-shadow: -1px -1px 0 white
+            font-size: 3rem
+            max-width: 600px
+            margin: 60px
+            text-wrap: pretty
         ul
             list-style: none
             margin: 1rem
